# Anglarium

./: CMakeLists.txt  README.md
FishgameCMAKE/: App.cpp  App.h  CCharacter.cpp  CCharacter.h  CFishing.cpp  CFishing.h  CMakeLists.txt  CMap.cpp  CMap.h  CPopups.cpp  CPopups.h  CTextureManager.h  CTexureManager.cpp  CTools.cpp  CTools.h  EventSystem.cpp  EventSystem.h  Fish.cpp  Fish.h  FishgameCMAKE.cpp  FishgameCMAKE.h
FishgameCMAKE/Resources/Maps/: map1.fshmap
FishgameCMAKE/Resources/lib/: fishrods.json
